# lesta-test-task

./: .gitignore  ReadMe.md  pyproject.toml
src/: board.py  combat.py  constants.py  core.py  game.py  game_object.py  main.py  obstacles.py  player.py  ships.py
src/obstacles/: __init__.py  base.py  cliff.py  island.py
src/radars/: __init__.py  base.py  crossline.py  weak.py
src/ships/: __init__.py  base.py  battleship.py  cruiser.py  destroyer.py
