[tool.poetry]
name = "lesta-test-task"
version = "0.1.0"
description = "Test task for Lesta Games LLC"
authors = ["colblind <brobee1001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
